2007-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xselect.c (x_own_selection, x_handle_selection_clear)
	(x_clear_frame_selections):
	* w32menu.c (list_of_panes, list_of_items):
	* w32fns.c (w32_color_map_lookup, Fx_create_frame, Fx_display_list):
	* textprop.c (validate_plist, interval_has_all_properties)
	(interval_has_some_properties, interval_has_some_properties_list)
	(add_properties, text_property_list):
	* process.c (Fget_buffer_process, list_processes_1, status_notify):
	* minibuf.c (Fassoc_string):
	* macselect.c (x_own_selection, x_clear_frame_selections)
	(Fx_disown_selection_internal):
	* keymap.c (Fcommand_remapping, where_is_internal, describe_map_tree):
	Use CONSP rather than !NILP and XC[AD]R rather than Fc[ad]r.

2007-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* process.c: Link to libs for calling res_init() if available.
	(Fmake_network_process): Call res_init() before getaddrinfo or
	gethostbyname, if possible.

2007-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read1): Set pvectype for char_tables.

	* lisp.h (XMISCANY, XMARKER, XINTFWD, XBOOLFWD, XOBJFWD, XOVERLAY)
	(XBUFFER_OBJFWD, XBUFFER_LOCAL_VALUE, XKBOARD_OBJFWD, XSAVE_VALUE):
	Add type checks.
	(SOME_BUFFER_LOCAL_VALUEP, GC_SOME_BUFFER_LOCAL_VALUEP): Remove.

	* alloc.c (free_misc): Use XMISCTYPE.
	(live_misc_p, gc_sweep): Use Lisp_Misc_Any.

2007-10-17  Glenn Morris  <rgm@gnu.org>

	* minibuf.c (Qcompletion_ignore_case): New Lisp_Object.
	(syms_of_minibuf): Add Qcompletion_ignore_case.
	* dired.c (Qcompletion_ignore_case): Change to external.
	(syms_of_dired) [VMS]: Remove Qcompletion_ignore_case.
	* fileio.c (Qcompletion_ignore_case): New external Lisp_Object.
	(Fread_file_name): Use it rather than intern'ing.

	* coding.c (Qcompletion_ignore_case): New external Lisp_Object.
	(Fread_coding_system): Ignore case of user input.

2007-10-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (handle_display_prop): Ignore display specs after