@@ -1,3 +1,9 @@
+2007-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* keyboard.c (read_key_sequence): Undo a change introduced by multi-tty
+	which caused key-translation-map to applied repeatedly (thus breaking
+	double-mode).
+
 2007-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* xselect.c (x_own_selection, x_handle_selection_clear)
